--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "activationEvents": [],
   "main": "./src/extension.js",
   "contributes": {
-    "commands": [{
-      "command": "bodiapo.bodiapo",
-      "title": "Génération d'un diaporama html",
-      "category": "boDiapo"
-    }]
+    "commands": [
+      {
+        "command": "bodiapo.bodiapo",
+        "title": "Génération d'un diaporama html",
+        "category": "boDiapo"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -24,14 +26,18 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.80.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.80.0",
+    "@vscode/test-electron": "^2.2.3",
     "eslint": "^8.34.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
-    "@vscode/test-electron": "^2.2.3"
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "node": "^22.2.0",
+    "sharp": "^0.33.4"
   }
 }
