--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "1.0.0",
   "publisher": "borakLeRouge",
   "icon": "icone.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BorakLeRouge/boDiapo"
+  },
   "engines": {
     "vscode": "^1.80.0"
   },
