--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bodiapo",
   "displayName": "boDiapo",
-  "description": "Génération d'un dipaorama html",
-  "version": "1.0.1",
+  "description": "Génération d'un diaporama html",
+  "version": "1.0.2",
   "publisher": "borakLeRouge",
   "icon": "icone.png",
   "repository": {
